complete and finishing styling design

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                     </div>
                     <div class="greet-user">
                         <p>Hi there,</p>
-                        <h1>Maulana Coconut(@maulcoco)</h1>
+                        <h1>Maulana Coconut (@maulcoco)</h1>
                     </div>
                     
                     <div class="group-button">
@@ -81,7 +81,7 @@
                             <div class="line-deco"></div>
                         </div>
                         <div class="card-box">
-                            <h1>Super Cool Project</h1>
+                            <h1>Less Cool Project</h1>
                             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ratione, maxime magnam! Nulla, ea maxime. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem dolorem error repellendus iusto, delectus tenetur. Voluptate, sit incidunt dolorum soluta ex illum doloremque? Quae nemo quia veniam aliquam commodi doloremque?</p>
                             <div class="my-icons">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>star-plus-outline</title><path d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z" /></svg>
@@ -91,7 +91,7 @@
                             <div class="line-deco"></div>
                         </div>
                         <div class="card-box">
-                            <h1>Super Cool Project</h1>
+                            <h1>Imposible App</h1>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Ducimus facere iusto voluptates ipsum dolorem consectetur vitae accusantium, quae eaque voluptate iure ullam? Ex repellendus ullam delectus cum! Repudiandae, quam placeat? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem dolorem error repellendus iusto, delectus tenetur. Voluptate, sit incidunt dolorum soluta ex illum doloremque? Quae nemo quia veniam aliquam commodi doloremque?</p>
                             <div class="my-icons">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>star-plus-outline</title><path d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z" /></svg>
@@ -101,7 +101,7 @@
                             <div class="line-deco"></div>
                         </div>
                         <div class="card-box">
-                            <h1>Super Cool Project</h1>
+                            <h1>Easy Peasy App</h1>
                             <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Repellat optio, facere facilis magni blanditiis temporibus atque non inventore corporis sequi. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem dolorem error repellendus iusto, delectus tenetur. Voluptate, sit incidunt dolorum soluta ex illum doloremque? Quae nemo quia veniam aliquam commodi doloremque?</p>
                             <div class="my-icons">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>star-plus-outline</title><path d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z" /></svg>
@@ -111,7 +111,7 @@
                             <div class="line-deco"></div>
                         </div>
                         <div class="card-box">
-                            <h1>Super Cool Project</h1>
+                            <h1>Ad Blocker</h1>
                             <p>Lorem Laudantium dolores non cumque natus? Itaque molestiae excepturi, at ea error enim labore reiciendis sequi quia autem, cum amet nemo id ratione. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem dolorem error repellendus iusto, delectus tenetur. Voluptate, sit incidunt dolorum soluta ex illum doloremque? Quae nemo quia veniam aliquam commodi doloremque?</p>
                             <div class="my-icons">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>star-plus-outline</title><path d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z" /></svg>
@@ -121,7 +121,7 @@
                             <div class="line-deco"></div>
                         </div>
                         <div class="card-box">
-                            <h1>Super Cool Project</h1>
+                            <h1>Money Maker</h1>
                             <p>Aperiam atque ducimus quo quae corrupti labore ad! Lorem ipsum dolor sit amet consectetur, adipisicing elit. Distinctio, itaque! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Exercitationem dolorem error repellendus iusto, delectus tenetur. Voluptate, sit incidunt dolorum soluta ex illum doloremque? Quae nemo quia veniam aliquam commodi doloremque?</p>
                             <div class="my-icons">
                                 <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><title>star-plus-outline</title><path d="M5.8 21L7.4 14L2 9.2L9.2 8.6L12 2L14.8 8.6L22 9.2L18.8 12H18C17.3 12 16.6 12.1 15.9 12.4L18.1 10.5L13.7 10.1L12 6.1L10.3 10.1L5.9 10.5L9.2 13.4L8.2 17.7L12 15.4L12.5 15.7C12.3 16.2 12.1 16.8 12.1 17.3L5.8 21M17 14V17H14V19H17V22H19V19H22V17H19V14H17Z" /></svg>
@@ -143,12 +143,12 @@
                             <div class="devider"></div>
                         </div>
                         <div class="card-list">
-                            <p><strong>Site Maintenance</strong></p>
+                            <p><strong>Community Share Day</strong></p>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae a asperiores, nihil enim provident sunt odio aperiam quasi aut sequi!</p>
                             <div class="devider"></div>
                         </div>
                         <div class="card-list" id="last-list">
-                            <p><strong>Site Maintenance</strong></p>
+                            <p><strong>Updated Privacy Policy</strong></p>
                             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Repudiandae a asperiores, nihil enim provident sunt odio aperiam quasi aut sequi!</p>
                         </div>
                     </div>
@@ -160,28 +160,28 @@
                                 <img src="friend-1.png" alt="#">
                                 <div class="parag-friends">
                                     <p>@tagan</p>
-                                    <p>Lorem ipsum dolor sit amet.</p>
+                                    <p>World Peace Builder</p>
                                 </div>
                             </div>
                             <div class="card-friends">
                                 <img src="friend-2.png" alt="#">
                                 <div class="parag-friends">
-                                    <p>@tagan</p>
-                                    <p>Lorem ipsum dolor sit amet.</p>
+                                    <p>@morgan</p>
+                                    <p>Super Cool Project</p>
                                 </div>
                             </div>
                             <div class="card-friends">
                                 <img src="friend-3.png" alt="#">
                                 <div class="parag-friends">
-                                    <p>@tagan</p>
-                                    <p>Lorem ipsum dolor sit amet.</p>
+                                    <p>@kendall</p>
+                                    <p>Life Changing App</p>
                                 </div>
                             </div>
                             <div class="card-friends" id="last-friends">
                                 <img src="friend-4.png" alt="#">
                                 <div class="parag-friends">
-                                    <p>@tagan</p>
-                                    <p>Lorem ipsum dolor sit amet.</p>
+                                    <p>@alex</p>
+                                    <p>No Traffic Maker</p>
                                 </div>
                             </div>
                         </div>
